# coneZ

./: .gitignore  AGENTS.md  CLAUDE.md
c_sharp/mayhem/: BUGS.md  EXPORT.md  mayhem_description.md  mayhem_structures.md  readme.md
documentation/: TODO.txt  bas2wasm-vs-quickbasic.txt  bas2wasm.txt  basic-scripting.txt  basic_readme.txt  c2wasm.txt  cli-commands.txt  config.txt  cue-system-design.txt  cue_cue_list_structure.txt  cues_params_streams.txt  gpio-list.txt  high_level_description.md  known-bugs.txt  lora-protocol.txt  lora-v1-implementation-plan.txt  mqtt.txt  sdkconfig-options.txt  sewerpipe.txt  simulator.txt  wasm-api.txt  wasm-psram-analysis.txt
firmware/: .gitignore  partitions.csv  patch_firmware_ver.py  platformio.ini  sdkconfig.defaults
firmware/components/esp_littlefs/: CMakeLists.txt
firmware/data/: bench.wasm  config.ini.example  format.bas  hsv_rainbow.wasm  rgb_cycle.wasm  sol.bas  sos_flash.wasm  test.bas  test.cue  test255.bas
firmware/src/: basic.h  basic_extensions.h  basic_wrapper.cpp  basic_wrapper.h  board.h  commands.cpp  commands.h  config.cpp  config.h  cue.cpp  cue.h  effects.cpp  effects.h  extensions.h  gps.cpp  gps.h  http.cpp  http.h  led.cpp  led.h  lora.cpp  lora.h  main.cpp  main.h  printManager.cpp  printManager.h  sensors.cpp  sensors.h  sun.cpp  sun.h  util.cpp  util.h
hardware/PCB v0.1/: ConeZ-v0_1.eprj
lora-master/: .gitignore  build_manifest.py  conez-master.ini.example  conez-master.py  conez-masterctl.py  lora_proto.py  old_manifest.txt  reed_solomon.py
lora-master/LoRaRF/: SX126x.py
lora-master/bak/: build_manifest.py
lora-master/dist-state/: manifest_1.txt  manifest_3.txt  serial.txt
simulator/conez/: CMakeLists.txt
simulator/conez/data/: format.bas  rgb_cycle.wasm  test.bas
simulator/conez/src/: main.cpp  mainwindow.cpp  mainwindow.h
simulator/conez/src/compiler/: bas2wasm_embed.c  c2wasm_embed.c
simulator/conez/src/gui/: console_widget.cpp  console_widget.h  led_strip_widget.cpp  led_strip_widget.h  sensor_panel.cpp  sensor_panel.h
simulator/conez/src/state/: artnet_receiver.cpp  artnet_receiver.h  artnet_sender.cpp  artnet_sender.h  cue_engine.cpp  cue_engine.h  deflate_util.cpp  deflate_util.h  inflate_util.cpp  inflate_util.h  led_state.cpp  led_state.h  mqtt_client.cpp  mqtt_client.h  sensor_state.cpp  sensor_state.h  sim_config.cpp  sim_config.h
simulator/conez/src/wasm/: sim_wasm_imports.h  sim_wasm_imports_compression.cpp  sim_wasm_imports_datetime.cpp  sim_wasm_imports_deflate.cpp  sim_wasm_imports_file.cpp  sim_wasm_imports_format.cpp  sim_wasm_imports_gpio.cpp  sim_wasm_imports_io.cpp  sim_wasm_imports_led.cpp  sim_wasm_imports_math.cpp  sim_wasm_imports_sensors.cpp  sim_wasm_imports_string.cpp  sim_wasm_imports_system.cpp  sim_wasm_runtime.cpp  sim_wasm_runtime.h
simulator/conez/src/worker/: compiler_worker.cpp  compiler_worker.h  wasm_worker.cpp  wasm_worker.h
tools/: Makefile  cuetool.py  example_show.yaml
(+708 files in other folders)
